[gd_scene load_steps=10 format=3 uid="uid://dj6ck7jbimqxg"]

[ext_resource type="Script" path="res://Scripts/UI/CustomSpellBuilder.gd" id="1_vvuof"]
[ext_resource type="Texture2D" uid="uid://ddbnbpi1b1nrx" path="res://textures/UI/SpellIcons/bolt.png" id="2_jvur2"]
[ext_resource type="Texture2D" uid="uid://bi082xesxv6vj" path="res://textures/UI/SpellIcons/light.png" id="3_uqgam"]
[ext_resource type="Texture2D" uid="uid://d3ymt3lh843es" path="res://textures/UI/SpellIcons/plus.png" id="4_w84oc"]
[ext_resource type="Texture2D" uid="uid://cp65c44yhmslx" path="res://textures/UI/SpellIcons/skull.png" id="5_4bo3x"]
[ext_resource type="Texture2D" uid="uid://dld4onprx0dle" path="res://textures/UI/SpellIcons/x.png" id="6_2yoh7"]
[ext_resource type="Texture2D" uid="uid://dp4jwmk6a57uf" path="res://textures/UI/SpellIcons/electric.png" id="7_ry7ud"]
[ext_resource type="Texture2D" uid="uid://dsde3x4un8ts1" path="res://textures/UI/SpellIcons/nature.png" id="8_2vsbi"]
[ext_resource type="Texture2D" uid="uid://mkdqg10vo7qd" path="res://textures/UI/SpellIcons/fire.png" id="9_y8biu"]

[node name="CustomSpellBuilder" type="VBoxContainer"]
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
alignment = 1
script = ExtResource("1_vvuof")

[node name="NameContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="NameContainer"]
layout_mode = 2
text = "Spell Name"

[node name="SpellNameField" type="LineEdit" parent="NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "spell name here!"

[node name="PatternContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="PatternContainer"]
layout_mode = 2
text = "Pattern"

[node name="PatternLabel" type="Label" parent="PatternContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select a page and a spell icon"
horizontal_alignment = 1

[node name="CustomizerContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PageList" type="ItemList" parent="VBoxContainer/CustomizerContainer"]
layout_mode = 2
size_flags_horizontal = 3
allow_search = false
auto_height = true
item_count = 3
item_0/text = "Page 1"
item_1/text = "Page 2"
item_2/text = "Page 3"

[node name="IconList" type="ItemList" parent="VBoxContainer/CustomizerContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_text_lines = 2
auto_height = true
item_count = 8
max_columns = 4
item_0/text = ""
item_0/icon = ExtResource("2_jvur2")
item_1/text = ""
item_1/icon = ExtResource("3_uqgam")
item_2/text = ""
item_2/icon = ExtResource("4_w84oc")
item_3/text = ""
item_3/icon = ExtResource("5_4bo3x")
item_4/text = ""
item_4/icon = ExtResource("6_2yoh7")
item_5/text = ""
item_5/icon = ExtResource("7_ry7ud")
item_6/text = ""
item_6/icon = ExtResource("8_2vsbi")
item_7/text = ""
item_7/icon = ExtResource("9_y8biu")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save!"

[connection signal="item_selected" from="VBoxContainer/CustomizerContainer/PageList" to="." method="_on_page_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
